feat: Build the 'rtracks' gem and install it

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build-iPhoneSimulator/
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
-/doc/
+# /doc/
 /rdoc/
 
 ## Environment normalization:
